k8s/kyz/apps/kube-tools/flux/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "flux-webhook.waltr.tech"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "flux-webhook.waltr.tech"
